# videogame

./: .gitignore  .gitmodules  CMakeLists.txt  design.md
app/: CMakeLists.txt
app/game/: CMakeLists.txt  main.cpp
include/engine/: Callback.h  Option.h  RC.h  Rect.h  Result.h  sample.h
include/engine/graphics/: Window.h
include/engine/memory/: DynamicVariant.h  StaticObjectPool.h
include/engine/model/: Actor.h  Entity.h  Game.h  State.h
include/engine/script/: Result.h  VM.h
include/engine/util/: HandleT.h
src/: CMakeLists.txt  sample.cpp
